--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,9 @@ environment:
   PYTHON: C:\Python36-x64
   PYTHON_VERSION: 3.6
   PYTHON_ARCH: 64
-  
+  GITHUB_TOKEN:
+    secure: IdgCOIno/YfkZynVnR2pBSjpkNG+4+XZneFXnqBVvxwX3MYX0EKqdzIUVPxQrkJu
+
 install:
 - ps: "mkdir c:/whls \nif(!(Test-Path -Path \"c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/pyETA/releases/download/wheels/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/pyETA/releases/download/wheels/numba-0.37.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/pyETA/releases/download/wheels/numpy-1.14.1.mkl-cp36-cp36m-win_amd64.whl -FileName c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\n}\npip install pypiwin32\npip install pyinstaller\npip install cffi\npip install c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\npip install c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\npip install c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl"
 cache:
@@ -19,6 +21,9 @@ cache:
 - '%LOCALAPPDATA%\pip\Cache'
 build_script:
 - cmd: build.bat
-artifacts:
-  - path: \dist\ETA\ETA.exe
-    name: Releases
+test_script:
+- cmd: >-
+     npm install -g github-release-cli
+     github-release upload --owner=timeta --repo=github-release-cli --tag="latest" --name="$APPVEYOR_BUILD_NUMBER%" --body="$APPVEYOR_BUILD_NUMBER%" "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/dist/ETA/eta.exe"
+
+
