--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 version: build.{build}
+skip_tags: true
 image: Visual Studio 2017
 init:
 - cmd: >-
@@ -24,6 +25,6 @@ build_script:
 test_script:
 - cmd: >-
      npm install -g github-release-cli
-     github-release upload --owner=timeta --repo=github-release-cli --tag="latest" --name="$APPVEYOR_BUILD_NUMBER%" --body="$APPVEYOR_BUILD_NUMBER%" "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/dist/ETA/eta.exe"
+     github-release upload --owner=timetag --repo=pyETA --tag="$APPVEYOR_BUILD_NUMBER%" --name="$APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/dist/ETA/eta.exe"
 
 
