Signed-off-by: Zuzeng Lin <linzuzeng@hotmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,6 @@ test_script:
 - cmd: >-
      npm install -g github-release-cli
      
-     github-release upload --owner=timetag --repo=pyETA --tag="$APPVEYOR_BUILD_NUMBER%" --name="$APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/dist/ETA/eta.exe"
+     github-release upload --owner=timetag --repo=pyETA --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/dist/ETA/eta.exe"
 
 
