--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,11 +21,23 @@ cache:
 - c:/whls
 - '%LOCALAPPDATA%\pip\Cache'
 build_script:
-- cmd: build.bat
+- cmd: >-
+    pyinstaller --clean  --add-data "favicon.ico;."  --add-data "ll/*;ll" -i favicon.ico  ETA.py
+    
+    7z a ETA.zip %APPVEYOR_BUILD_FOLDER%\dist
+    
+    rm %APPVEYOR_BUILD_FOLDER%\dist
+    
+    rm %APPVEYOR_BUILD_FOLDER%\build
+    
+    pyinstaller --clean --onefile --add-data "favicon.ico;."  --add-data "ll/*;ll" -i favicon.ico  ETA.py
+    
+    mv %APPVEYOR_BUILD_FOLDER%\dist\ETA.exe %APPVEYOR_BUILD_FOLDER%\ETA.exe
+  
 test_script:
 - cmd: >-
      npm install -g github-release-cli
      
-     github-release upload --owner=timetag --repo=pyETA --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/dist/ETA/eta.exe"
+     github-release upload --owner=timetag --repo=pyETA --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/eta.exe"
 
 
