--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ environment:
     secure: IdgCOIno/YfkZynVnR2pBSjpkNG+4+XZneFXnqBVvxwX3MYX0EKqdzIUVPxQrkJu
 
 install:
-- ps: "mkdir c:/whls \nif(!(Test-Path -Path \"c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/pyETA/releases/download/wheels/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/pyETA/releases/download/wheels/numba-0.37.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/pyETA/releases/download/wheels/numpy-1.14.1.mkl-cp36-cp36m-win_amd64.whl -FileName c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\n}\npip install pypiwin32\npip install pyinstaller\npip install cffi\npip install numpy\npip install c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\npip install c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl"
+- ps: "mkdir c:/whls \nif(!(Test-Path -Path \"c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETAServer/releases/download/wheels/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETAServer/releases/download/wheels/numba-0.37.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETAServer/releases/download/wheels/numpy-1.14.1.mkl-cp36-cp36m-win_amd64.whl -FileName c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\n}\npip install pypiwin32\npip install pyinstaller\npip install cffi\npip install numpy\npip install c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\npip install c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl"
 cache:
 - c:/whls
 - '%LOCALAPPDATA%\pip\Cache'
@@ -38,6 +38,6 @@ test_script:
 - cmd: >-
      npm install -g github-release-cli
      
-     github-release upload --owner=timetag --repo=pyETA --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/eta.exe"
+     github-release upload --owner=timetag --repo=ETAServer --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/eta.exe"
 
 
