--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,13 +16,12 @@ environment:
     secure: IdgCOIno/YfkZynVnR2pBSjpkNG+4+XZneFXnqBVvxwX3MYX0EKqdzIUVPxQrkJu
 
 install:
+- ps: "mkdir c:/whls \nif(!(Test-Path -Path \"c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETABackend/releases/download/wheels/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETABackend/releases/download/wheels/numba-0.37.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETABackend/releases/download/wheels/numpy-1.14.1.mkl-cp36-cp36m-win_amd64.whl -FileName c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\n}\npip install pypiwin32\npip install pyinstaller\npip install cffi\npip install numpy\npip install dash==0.21.0\npip install dash-renderer==0.11.3\npip install dash-html-components==0.9.0\npip install dash-core-components==0.21.0\npip install plotly --upgrade\npip install c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\npip install c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl"
 
-
-
-- ps: "mkdir c:/whls \nif(!(Test-Path -Path \"c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETAServer/releases/download/wheels/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETAServer/releases/download/wheels/numba-0.37.0-cp36-cp36m-win_amd64.whl -FileName c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl\n}\nif(!(Test-Path -Path \"c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\" )){\n appveyor DownloadFile https://github.com/timetag/ETAServer/releases/download/wheels/numpy-1.14.1.mkl-cp36-cp36m-win_amd64.whl -FileName c:/whls/numpy-1.14.1+mkl-cp36-cp36m-win_amd64.whl\n}\npip install pypiwin32\npip install pyinstaller\npip install cffi\npip install numpy\npip install dash==0.21.0\npip install dash-renderer==0.11.3\npip install dash-html-components==0.9.0\npip install dash-core-components==0.21.0\npip install plotly --upgrade\npip install c:/whls/llvmlite-0.22.0-cp36-cp36m-win_amd64.whl\npip install c:/whls/numba-0.37.0-cp36-cp36m-win_amd64.whl"
 cache:
 - c:/whls
 - '%LOCALAPPDATA%\pip\Cache'
+
 build_script:
 - cmd: >-
     pyinstaller --clean  --add-data "favicon.ico;."  --add-data "ll/*;ll" -i favicon.ico  ETA.py
@@ -41,6 +40,6 @@ test_script:
 - cmd: >-
      npm install -g github-release-cli
      
-     github-release upload --owner=timetag --repo=ETAServer --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/eta.exe"
+     github-release upload --owner=timetag --repo=ETABackend --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/pyeta/eta.zip"  "C:/projects/pyeta/eta.exe"
 
 
