--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,24 +24,7 @@ cache:
 
 build_script:
 - cmd: >-
-    pyinstaller --clean  --add-data "favicon.ico;." 
-    --add-data "ll/*;ll"  
-    --add-data "plotly/package_data/*;plotly/package_data" 
-    --add-data "dash_core_components/*;dash_core_components" 
-    --add-data "dash_renderer/*;dash_renderer" 
-    --add-data "dash_html_components/*;dash_html_components" 
-    -i favicon.ico 
-    --hidden-import scipy._lib.messagestream 
-    --paths "c:\\python36-x64\\lib\\site-packages\\scipy\\extra-dll"
-    ETA.py
-    
-    7z a ETA_bundle.zip %APPVEYOR_BUILD_FOLDER%\dist
-
-    RMDIR /S /Q %APPVEYOR_BUILD_FOLDER%\dist
-    
-    RMDIR /S /Q %APPVEYOR_BUILD_FOLDER%\build
-    
-    pyinstaller --clean --onefile --add-data "favicon.ico;." 
+    pyinstaller --clean --onefile 
     --add-data "ll/*;ll" 
     --exclude-module numba
     --exclude-module llvmlite
@@ -51,6 +34,7 @@ build_script:
     --exclude-module dash_html_components
     --exclude-module dash
     --exclude-module dash_core_components
+    --hidden-import timeit
     -i favicon.ico  
     ETA.py
 
@@ -62,6 +46,6 @@ test_script:
 - cmd: >-
      npm install -g github-release-cli
      
-     github-release upload --owner=timetag --repo=ETABackend --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/ETABackend/ETA_bundle.zip"  "C:/projects/ETABackend/eta.exe"  "C:/projects/ETABackend/ETA_LIB.zip"
+     github-release upload --owner=timetag --repo=ETABackend --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/ETABackend/eta.exe"
 
-
+     github-release upload --owner=timetag --repo=ETABackend --tag="eta_lib" --name="ETA_LIB"  "C:/projects/ETABackend/ETA_LIB.zip"
