Signed-off-by: Zuzeng Lin <linzuzeng@hotmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -94,6 +94,4 @@ test_script:
 - cmd: >-
      npm install -g github-release-cli
      
-     github-release upload --owner=timetag --repo=ETABackend --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/ETABackend/ETABackend.exe"
-
-     echo  "C:/projects/ETABackend/ETA_LIB.zip" 
+     github-release upload --owner=timetag --repo=ETABackend --tag="%APPVEYOR_BUILD_NUMBER%" --name="%APPVEYOR_BUILD_NUMBER%"  "C:/projects/ETABackend/ETABackend.exe" "C:/projects/ETABackend/ETA_LIB.zip" 
