--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,27 +40,27 @@ install:
     
     }
     
-    python -m pip install pypiwin32
+    python -m pip install pypiwin32 --upgrade
     
-    python -m pip install --upgrade pyinstaller
+    python -m pip install pyinstaller --upgrade 
     
-    python -m pip install cffi
+    python -m pip install cffi --upgrade
     
-    python -m pip install numpy
+    python -m pip install numpy --upgrade
     
-    python -m pip install scipy
+    python -m pip install scipy --upgrade
     
-    python -m pip install lmfit
+    python -m pip install lmfit --upgrade
     
-    python -m pip install astunparse
+    python -m pip install astunparse --upgrade
     
-    python -m pip install dash==0.21.0
+    python -m pip install dash --upgrade
     
-    python -m pip install dash-renderer==0.11.3
+    python -m pip install dash-renderer --upgrade
     
-    python -m pip install dash-html-components==0.9.0
+    python -m pip install dash-html-components --upgrade
     
-    python -m pip install dash-core-components==0.21.0
+    python -m pip install dash-core-components --upgrade
     
     python -m pip install plotly --upgrade
     
@@ -81,6 +81,7 @@ build_script:
     --exclude-module numba
     --exclude-module llvmlite
     --exclude-module numpy
+    --exclude-module bokeh
     --exclude-module scipy
     --exclude-module flask
     --hidden-import timeit
