Signed-off-by: Zuzeng Lin <linzuzeng@hotmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -87,6 +87,8 @@ build_script:
     --hidden-import timeit
     --hidden-import http
     --hidden-import http.cookies
+    --hidden-import logging.handlers
+    --hidden-import logging
     -i icon.ico  
     ETA.py
 
