Signed-off-by: Zuzeng Lin <linzuzeng@hotmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -89,6 +89,7 @@ build_script:
     --hidden-import http.cookies
     --hidden-import logging.handlers
     --hidden-import logging
+    --hidden-import ctypes.wintypes
     -i icon.ico  
     ETA.py
 
