--- a/gui/package.json
+++ b/gui/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "author": "Zuzeng Lin <zuzeng@kth.se>",
   "homepage": "http://timetag.github.io",
-  "version": "0.0.49",
+  "version": "0.5.0",
   "scripts": {
     "dev": "electron .",
     "dist": "electron-builder",
@@ -27,12 +27,12 @@
     }
   },
   "dependencies": {
-    "electron-log": "^2.2.14",
-    "electron-updater": "^2.20.1"
+    "electron-log": "^2.2.16",
+    "electron-updater": "^3.0.3"
   },
   "devDependencies": {
-    "electron": "1.8.3",
-    "electron-builder": "^20.0.6"
+    "electron": "^2.0.5",
+    "electron-builder": "^20.26.0"
   },
   "resolutions": {}
 }
