--- a/appveyor.yml
+++ b/appveyor.yml
@@ -110,9 +110,11 @@ build_script:
     -i icon.ico  
     ETA.py
 
+    move %APPVEYOR_BUILD_FOLDER%\dist\ETA.exe %APPVEYOR_BUILD_FOLDER%\ETA-Backend.exe
+
     7z a ETA_LIB.zip "c:\python36-x64\lib\site-packages"
-    
-    move %APPVEYOR_BUILD_FOLDER%\dist\ETA.exe %APPVEYOR_BUILD_FOLDER%\ETABackend.exe
+    7z a ETA_QuickStart.zip %APPVEYOR_BUILD_FOLDER%\*.exe
+
     
 test_script:
 - cmd: >-
@@ -123,6 +125,8 @@ test_script:
 
      cd ..
 
-     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETABackend.exe" -n "ETABackend.exe" --replace
+     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA-Backend.exe" -n "ETA-Backend.exe" --replace
 
      gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_LIB.zip"  -n "ETA_LIB.zip" --replace
+     
+     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_LIB.zip"  -n "ETA_QuickStart.zip" --replace
