--- a/appveyor.yml
+++ b/appveyor.yml
@@ -125,7 +125,9 @@ build_script:
 test_script:
 - cmd: >-
     7z a ETA_LIB.zip "c:\python36-x64\lib\site-packages"
-
+    
+    7z a ETA_LIB.zip %APPVEYOR_BUILD_FOLDER%\ETA-Backend.exe
+    
     7z a ETA_QuickStart.zip %APPVEYOR_BUILD_FOLDER%\*.exe
 
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA-Backend.exe" -n "ETA-Backend.exe" --replace
