--- a/appveyor.yml
+++ b/appveyor.yml
@@ -110,6 +110,10 @@ build_script:
     -i icon.ico  
     ETA.py
 
+    move %APPVEYOR_BUILD_FOLDER%\dist\ETA.exe %APPVEYOR_BUILD_FOLDER%\ETA-Backend-%ETA_VER%.exe
+    
+    echo building GUI
+    
     cd gui
 
     yarn dist
@@ -120,18 +124,13 @@ build_script:
 
     move %APPVEYOR_BUILD_FOLDER%\gui\dist\*.exe %APPVEYOR_BUILD_FOLDER%\
 
-    move %APPVEYOR_BUILD_FOLDER%\dist\ETA.exe %APPVEYOR_BUILD_FOLDER%\ETA-Backend.exe
-
 test_script:
 - cmd: >-
-    7z a ETA_LIB.zip "c:\python36-x64\lib\site-packages"
+    7z a ETA_FreshInstall-win64.zip "c:\python36-x64\lib\site-packages"
     
-    7z a ETA_LIB.zip %APPVEYOR_BUILD_FOLDER%\ETA-Backend.exe
-    
-    7z a ETA_QuickStart.zip %APPVEYOR_BUILD_FOLDER%\*.exe
+    7z a ETA_FreshInstall-win64.zip %APPVEYOR_BUILD_FOLDER%\*.exe
 
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA-Backend.exe" -n "ETA-Backend.exe" --replace
+    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA-Backend-%ETA_VER%.exe" -n "ETA-Backend-%ETA_VER%.exe" --replace
 
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_LIB.zip"  -n "ETA_LIB.zip" --replace
+    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_FreshInstall-win64.zip"  -n "ETA_FreshInstall-win64.zip" --replace
      
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_QuickStart.zip"  -n "ETA_QuickStart.zip" --replace
