--- a/appveyor.yml
+++ b/appveyor.yml
@@ -126,11 +126,11 @@ build_script:
 
 test_script:
 - cmd: >-
-    7z a ETA_FreshInstall-win64.zip "c:\python36-x64\lib\site-packages"
+    7z a ETA_Install-win64.zip "c:\python36-x64\lib\site-packages"
     
-    7z a ETA_FreshInstall-win64.zip %APPVEYOR_BUILD_FOLDER%\*.exe
+    7z a ETA_Install-win64.zip %APPVEYOR_BUILD_FOLDER%\*.exe
 
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA-Backend-%ETA_VER%.exe" -n "ETA-Backend-%ETA_VER%.exe" --replace
 
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_FreshInstall-win64.zip"  -n "ETA_FreshInstall-win64.zip" --replace
+    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Install-win64.zip"  -n "ETA_Install-win64.zip" --replace
      
