--- a/gui/package.json
+++ b/gui/package.json
@@ -24,6 +24,9 @@
       "extraResources": [
         "ETA-Backend.exe"
       ],
+      "extraFiles": [
+        "ETA-Backend.exe"
+      ],
       "publish": [
         "github"
       ]
