fixing tkinter.simpledialog not found

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -103,6 +103,7 @@ build_script:
     --hidden-import pathlib
     --hidden-import tkinter 
     --hidden-import tkinter.filedialog
+    --hidden-import tkinter.simpledialog
     --hidden-import timeit
     --hidden-import http
     --hidden-import http.cookies
