--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
   PYTHON: C:\Python37-x64
   PYTHON_VERSION: 3.7
   PYTHON_ARCH: 64
-  ETA_VER: v0.5.9
+  ETA_VER: v0.5.10
   GITHUB_TOKEN:
     secure: IdgCOIno/YfkZynVnR2pBSjpkNG+4+XZneFXnqBVvxwX3MYX0EKqdzIUVPxQrkJu
   GOPATH: c:\gopath
@@ -63,9 +63,9 @@ install:
     
     python -m pip install bokeh --upgrade
 
-    python -m pip install llvmlite==0.26 #LLVM 6
+    python -m pip install llvmlite
     
-    python -m pip install numba==0.41.0
+    python -m pip install numba
     
     python -m pip install pandas --upgrade
 
