--- a/appveyor.yml
+++ b/appveyor.yml
@@ -117,9 +117,15 @@ build_script:
 
     ls %APPVEYOR_BUILD_FOLDER%\gui\dist\
 
-    move %APPVEYOR_BUILD_FOLDER%\gui\dist\*.exe %APPVEYOR_BUILD_FOLDER%\
+    mkdir %APPVEYOR_BUILD_FOLDER%\install_zip\
+
+    move %APPVEYOR_BUILD_FOLDER%\gui\dist\*.exe %APPVEYOR_BUILD_FOLDER%\install_zip\
+
+    move %APPVEYOR_BUILD_FOLDER%\dist\*.whl %APPVEYOR_BUILD_FOLDER%\install_zip\
     
-    7z a ETA_Install-win64.zip %APPVEYOR_BUILD_FOLDER%\*.exe
+    ls %APPVEYOR_BUILD_FOLDER%\install_zip\
+
+    7z a ETA_Install-win64.zip %APPVEYOR_BUILD_FOLDER%\install_zip\*.*
     
 test_script:
 - cmd: >-
@@ -127,7 +133,5 @@ test_script:
      
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Install-win64.zip"  -n "ETA_Install-win64.zip" --replace
     
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f %APPVEYOR_BUILD_FOLDER%\dist\*.whl  -n "ETA_Backend-win64.whl" --replace
-
     echo twine upload %APPVEYOR_BUILD_FOLDER%\dist\*.whl -u %PYPI_USERNAME% -p %PYPI_PASSWORD% --skip-existing
     
