--- a/appveyor.yml
+++ b/appveyor.yml
@@ -126,12 +126,16 @@ build_script:
     ls %APPVEYOR_BUILD_FOLDER%\install_zip\
 
     7z a ETA_Install-win64.zip %APPVEYOR_BUILD_FOLDER%\install_zip\*.*
-    
+
+    7z a ETA_Backend-win64.zip %APPVEYOR_BUILD_FOLDER%\install_zip\*.whl
+
 test_script:
 - cmd: >-
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_LIB-win64.zip"  -n "ETA_LIB-win64.zip" --replace
      
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Install-win64.zip"  -n "ETA_Install-win64.zip" --replace
     
+    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Backend-win64.zip"  -n "ETA_Backend-win64.zip" --replace
+
     echo twine upload %APPVEYOR_BUILD_FOLDER%\dist\*.whl -u %PYPI_USERNAME% -p %PYPI_PASSWORD% --skip-existing
     
