--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,10 +35,6 @@ init:
 install:
 - ps: >-
     python -m pip --version
-    
-    pip install --upgrade -r requirements.txt
-
-    7z a ETA_LIB-win64.zip "c:\python37-x64\lib\site-packages"
 
     go get github.com/itchio/gothub
     
@@ -73,6 +69,8 @@ build_script:
     
     appveyor DownloadFile https://www.python.org/ftp/python/3.7.3/python-3.7.3-amd64-webinstall.exe -FileName %APPVEYOR_BUILD_FOLDER%\gui\python-webinstall.exe
 
+    move %APPVEYOR_BUILD_FOLDER%\dist\*.whl %APPVEYOR_BUILD_FOLDER%\gui\*.whl
+
     cd gui
 
     yarn dist
@@ -81,25 +79,12 @@ build_script:
 
     ls %APPVEYOR_BUILD_FOLDER%\gui\dist\
 
-    mkdir %APPVEYOR_BUILD_FOLDER%\install_zip\
-
-    move %APPVEYOR_BUILD_FOLDER%\gui\dist\*.exe %APPVEYOR_BUILD_FOLDER%\install_zip\
-
-    move %APPVEYOR_BUILD_FOLDER%\dist\*.whl %APPVEYOR_BUILD_FOLDER%\install_zip\
-    
-    ls %APPVEYOR_BUILD_FOLDER%\install_zip\
-
-    7z a ETA_Install-win64.zip %APPVEYOR_BUILD_FOLDER%\install_zip\*.*
-
-    7z a ETA_Backend-win64.zip %APPVEYOR_BUILD_FOLDER%\install_zip\*.whl
+    7z a ETA_Install-win64.zip %APPVEYOR_BUILD_FOLDER%\gui\dist\*.exe
 
 test_script:
 - cmd: >-
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_LIB-win64.zip"  -n "ETA_LIB-win64.zip" --replace
-     
+   
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Install-win64.zip"  -n "ETA_Install-win64.zip" --replace
     
-    gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Backend-win64.zip"  -n "ETA_Backend-win64.zip" --replace
-
     echo twine upload %APPVEYOR_BUILD_FOLDER%\dist\*.whl -u %PYPI_USERNAME% -p %PYPI_PASSWORD% --skip-existing
     
