--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ build_script:
     
     appveyor DownloadFile https://www.python.org/ftp/python/3.7.3/python-3.7.3-amd64-webinstall.exe -FileName %APPVEYOR_BUILD_FOLDER%\gui\python-webinstall.exe
 
-    move %APPVEYOR_BUILD_FOLDER%\dist\*.whl %APPVEYOR_BUILD_FOLDER%\gui\*.whl
+    move %APPVEYOR_BUILD_FOLDER%\dist\*.whl %APPVEYOR_BUILD_FOLDER%\gui\
 
     cd gui
 
