--- a/gui/package.json
+++ b/gui/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "electron-log": "^3.0.5",
-    "electron-updater": "^4.0.0"
+    "electron-updater": "^4.0.0",
+    "open": "^6.3.0"
   },
   "devDependencies": {
     "electron": "^4.0.1",
