--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,7 +82,8 @@ build_script:
 
 test_script:
 - cmd: >-
-   
+    echo uploading to github
+
     gothub upload -u timetag -r ETA -t "%ETA_VER%" -f "ETA_Install-win64.zip"  -n "ETA_Install-win64.zip" --replace
     
     echo twine upload %APPVEYOR_BUILD_FOLDER%\dist\*.whl -u %PYPI_USERNAME% -p %PYPI_PASSWORD% --skip-existing
