--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,10 @@
+# tox.ini
 [tox]
 envlist = py{37}
 
 [testenv]
 description = Unit tests
-deps = pytest
+deps = 
+    pytest
+    -rrequirements.txt
 commands = pytest
